crates/bite-imgui-sys/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BiteVertex {
    pub pos: [f32; 2usize],
    pub uv: [f32; 2usize],
    pub color: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BiteVertex"][::std::mem::size_of::<BiteVertex>() - 20usize];
    ["Alignment of BiteVertex"][::std::mem::align_of::<BiteVertex>() - 4usize];
    ["Offset of field: BiteVertex::pos"][::std::mem::offset_of!(BiteVertex, pos) - 0usize];
    ["Offset of field: BiteVertex::uv"][::std::mem::offset_of!(BiteVertex, uv) - 8usize];
    ["Offset of field: BiteVertex::color"][::std::mem::offset_of!(BiteVertex, color) - 16usize];
};
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BiteCommand {
    pub count: u32,
    pub index_offset: u32,
    pub vertex_offset: u32,
    pub clip: [f32; 4usize],
    pub texture: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of BiteCommand"][::std::mem::size_of::<BiteCommand>() - 40usize];
    ["Alignment of BiteCommand"][::std::mem::align_of::<BiteCommand>() - 8usize];
    ["Offset of field: BiteCommand::count"][::std::mem::offset_of!(BiteCommand, count) - 0usize];
    ["Offset of field: BiteCommand::index_offset"]
        [::std::mem::offset_of!(BiteCommand, index_offset) - 4usize];
    ["Offset of field: BiteCommand::vertex_offset"]
        [::std::mem::offset_of!(BiteCommand, vertex_offset) - 8usize];
    ["Offset of field: BiteCommand::clip"][::std::mem::offset_of!(BiteCommand, clip) - 12usize];
    ["Offset of field: BiteCommand::texture"]
        [::std::mem::offset_of!(BiteCommand, texture) - 32usize];
};
unsafe extern "C" {
    pub fn bite_create(
        font_path: *const ::std::os::raw::c_char,
        font_size: f32,
        ui_scale: f32,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn bite_destroy(context: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn bite_frame(width: f32, height: f32, scale: f32, delta: f32);
}
unsafe extern "C" {
    pub fn bite_render();
}
unsafe extern "C" {
    pub fn bite_mouse_position(x: f32, y: f32);
}
unsafe extern "C" {
    pub fn bite_mouse_button(button: ::std::os::raw::c_int, down: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn bite_mouse_wheel(x: f32, y: f32);
}
unsafe extern "C" {
    pub fn bite_key(key: ::std::os::raw::c_int, down: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn bite_text_input(text: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bite_focus(focused: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn bite_font_pixels(
        pixels: *mut *const ::std::os::raw::c_uchar,
        width: *mut ::std::os::raw::c_int,
        height: *mut ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn bite_font_texture(texture: u64);
}
unsafe extern "C" {
    pub fn bite_dockspace();
}
unsafe extern "C" {
    pub fn bite_begin(title: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_end();
}
unsafe extern "C" {
    pub fn bite_text(text: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    pub fn bite_button(text: *const ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_drag_float(
        label: *const ::std::os::raw::c_char,
        value: *mut f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_input_text(
        label: *const ::std::os::raw::c_char,
        data: *mut ::std::os::raw::c_char,
        size: usize,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_checkbox(
        label: *const ::std::os::raw::c_char,
        value: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
    pub fn bite_combo(
        label: *const ::std::os::raw::c_char,
        current: *mut ::std::os::raw::c_int,
        items: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
    pub fn bite_next_item_full_width();
}
unsafe extern "C" {
    pub fn bite_image(texture: u64, width: f32, height: f32);
    pub fn bite_image_button(
        id: *const ::std::os::raw::c_char,
        texture: u64,
        width: f32,
        height: f32,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_same_line();
}
unsafe extern "C" {
    pub fn bite_editor_begin(
        context: *mut ::std::os::raw::c_void,
        label: *const ::std::os::raw::c_char,
    );
}
unsafe extern "C" {
    pub fn bite_editor_end();
}
unsafe extern "C" {
    pub fn bite_node_begin(id: u64);
}
unsafe extern "C" {
    pub fn bite_node_end();
}
unsafe extern "C" {
    pub fn bite_pin_begin(id: u64, output: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn bite_pin_end();
}
unsafe extern "C" {
    pub fn bite_link(id: u64, source: u64, target: u64, r: f32, g: f32, b: f32);
}
unsafe extern "C" {
    pub fn bite_new_link(source: *mut u64, target: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_new_node(pin: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_deleted_link(id: *mut u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_set_node_position(id: u64, x: f32, y: f32);
}
unsafe extern "C" {
    pub fn bite_get_node_position(id: u64, x: *mut f32, y: *mut f32);
}
unsafe extern "C" {
    pub fn bite_node_selected(id: u64) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_group(width: f32, height: f32);
}
unsafe extern "C" {
    pub fn bite_background_menu() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_navigate();
}
unsafe extern "C" {
    pub fn bite_draw_list_count() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_vertex_count(list: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_index_count(list: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_command_count(list: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn bite_copy_vertices(list: ::std::os::raw::c_int, vertices: *mut BiteVertex);
}
unsafe extern "C" {
    pub fn bite_copy_indices(list: ::std::os::raw::c_int, indices: *mut u32);
}
unsafe extern "C" {
    pub fn bite_get_command(
        list: ::std::os::raw::c_int,
        index: ::std::os::raw::c_int,
        command: *mut BiteCommand,
    ) -> ::std::os::raw::c_int;
}
